--- a/manager/templates/index.html
+++ b/manager/templates/index.html
@@ -9,6 +9,10 @@
 <textarea class="form-control" rows="10" ng-model="code">
 </textarea>
 
+<label>PCAP</label>
+<select ng-model="pcap" ng-options="p for p in pcaps">
+</select>
+
 <br>
 <button type="run" class="btn btn-primary">Run <span class="glyphicon glyphicon-play"></span> </button>
 
