truncate table columns that are long

--- a/manager/static/css/try-bro.css
+++ b/manager/static/css/try-bro.css
@@ -1,7 +1,10 @@
 body {
   padding-top: 50px;
 }
-.starter-template {
-  padding: 40px 15px;
-  text-align: center;
+
+.overflow{
+    width:100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
