--- a/manager/templates/index.html
+++ b/manager/templates/index.html
@@ -30,6 +30,7 @@
 <pre ng-bind="visible" ng-show="mode=='text'">
 </pre>
 
+{% raw %}
 <div class="table-responsive">
 <table class="table table-striped table-condensed" ng-show="mode=='table'" >
 <thead>
@@ -39,9 +40,10 @@
 </thead>
 <tbody>
     <tr ng-repeat="row in visible.rows">
-        <td ng-repeat="col in row track by $index" ng-bind="col"></th>
+        <td ng-repeat="col in row track by $index"><div class="overflow" ng-bind="col" title="{{col}}"></div></td>
     </tr>
 </tbody>
 </table>
+{% endraw %}
 
 {% endblock %}
