use http://ace.c9.io/ for editing text

--- a/manager/templates/index.html
+++ b/manager/templates/index.html
@@ -11,8 +11,8 @@
 <select ng-model="example_name" ng-options="e for e in examples">
 </select>
 
-<textarea class="form-control" rows="10" ng-model="code">
-</textarea>
+<div id="editor" class="form-control">function foo(items) {
+</div>
 
 <label>PCAP</label>
 <select ng-model="pcap" ng-options="p for p in pcaps">
