mutliple source file support

--- a/manager/templates/index.html
+++ b/manager/templates/index.html
@@ -11,8 +11,15 @@
 <select ng-model="example_name" ng-options="e for e in examples">
 </select>
 
-<div id="editor" class="form-control">function foo(items) {
+<ul class="nav nav-tabs">
+    <li ng-repeat="f in source_files" ng-class="{active: f==current_file}" ng-click="edit_file(f)"><a ng-bind="f.name"></a></li>
+    <li ng-click="add_file()"><a>Add file <span class="glyphicon glyphicon-plus"></span></a></li>
+</ul>
+
+<div ng-repeat="f in source_files">
+    <div ng-show="f==current_file" ui-ace="{onLoad: aceLoaded}" ng-model="f.content"></div>
 </div>
+
 
 <label>PCAP</label>
 <select ng-model="pcap" ng-options="p for p in pcaps">
