--- a/manager/templates/base.html
+++ b/manager/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="trybro">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -67,6 +67,7 @@
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
+    <script src="/static/js/ui-ace/ui-ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/js/trybro.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
