--- a/manager/templates/base.html
+++ b/manager/templates/base.html
@@ -66,6 +66,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
     <script src="/static/js/ui-ace/ui-ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/js/trybro.js" type="text/javascript" charset="utf-8"></script>
