--- a/manager/templates/index.html
+++ b/manager/templates/index.html
@@ -2,70 +2,7 @@
 
 {% block content %}
 
-<div ng-controller="CodeCtrl">
-
-<h1>Input Files</h1>
-<form method="POST" ng-submit="run_code()">
-
-<label>Load example </label>
-<select ng-model="example_name" ng-options="e for e in examples">
-</select>
-
-<ul class="nav nav-tabs">
-    <li ng-repeat="f in source_files" ng-class="{active: f==current_file}" ng-click="edit_file(f)"><a ng-bind="f.name"></a></li>
-    <li ng-click="add_file()"><a>Add file <span class="glyphicon glyphicon-plus"></span></a></li>
-</ul>
-
-<div ng-repeat="f in source_files">
-    <div ng-show="f==current_file" ui-ace="{onLoad: aceLoaded}" ng-model="f.content"></div>
-</div>
-
-
-<label>PCAP</label>
-<select ng-model="pcap" ng-options="p for p in pcaps">
-</select>
-
-<br>
-<button type="run" class="btn btn-primary">Run <span class="glyphicon glyphicon-play"></span> </button>
-
-</form>
-
-<h2 ng-show="stderr">Stderr</h2>
-<pre ng-bind="stderr" ng-show="stderr" class="alert alert-warning">
-</pre>
-
-<h2 ng-show="stdout">Stdout</h2>
-<pre ng-bind="stdout" ng-show="stdout">
-</pre>
-
-<div ng-show="files">
-
-<h2>Output Files</h2>
-
-<ul class="nav nav-tabs">
-    <li ng-repeat="(f, txt) in files" ng-class="{active: f==file}" ng-click="show_file(f)"><a ng-bind="f"></a></li>
-</ul>
-
-<pre ng-bind="visible" ng-show="mode=='text'">
-</pre>
-
-</div>
-
-{% raw %}
-<div class="table-responsive">
-<table class="table table-striped table-condensed" ng-show="mode=='table'" >
-<thead>
-    <tr>
-        <th ng-repeat="f in visible.header" ng-bind="f"></th>
-    </tr>
-</thead>
-<tbody>
-    <tr ng-repeat="row in visible.rows">
-        <td ng-repeat="col in row track by $index"><div class="overflow" ng-bind="col" title="{{col}}"></div></td>
-    </tr>
-</tbody>
-</table>
-{% endraw %}
+<div ui-view></div>
 
 </div>
 
