--- a/manager/templates/base.html
+++ b/manager/templates/base.html
@@ -52,6 +52,7 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
     <script src="/static/js/ui-ace/ui-ace.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/static/js/md5.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/js/trybro.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
