Implement modal popups for table row detail

--- a/manager/static/css/try-bro.css
+++ b/manager/static/css/try-bro.css
@@ -15,3 +15,13 @@ body {
 .ace_editor { 
     height: 40em;
 }
+
+.modal.modal-wide .modal-dialog {
+  width: 90%;
+}
+.modal.modal-wide .modal-content{
+  width: 90%;
+}
+.modal-wide .modal-body {
+  overflow-y: auto;
+}
