--- a/manager/templates/base.html
+++ b/manager/templates/base.html
@@ -45,13 +45,14 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
     <script src="/static/js/ui-ace/ui-ace.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/static/js/angular-modal-service.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/js/md5.js" type="text/javascript" charset="utf-8"></script>
     <script src="/static/js/trybro.js" type="text/javascript" charset="utf-8"></script>
   </body>
