fix non-ssl page component access

--- a/manager/templates/base.html
+++ b/manager/templates/base.html
@@ -31,7 +31,7 @@
 
   <body>
 
-    <iframe frameborder='0' height='100px' marginheight='0' marginwidth='0' scrolling='no' src='http://www.bro-ids.org/frames/header.html' width='100%'>
+    <iframe frameborder='0' height='100px' marginheight='0' marginwidth='0' scrolling='no' src='https://www.bro.org/frames/header.html' width='100%'>
     </iframe>
 
     <div class="container">
