add max-width to table cells

--- a/manager/web-ui/src/App.css
+++ b/manager/web-ui/src/App.css
@@ -1,3 +1,10 @@
 .Pointer {
     cursor: pointer;
 }
+
+.overflow{
+    max-width:200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
