--- a/manager/templates/base.html
+++ b/manager/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <title>
-    Try Bro
+    Try Zeek
     {% block title %}
     {% endblock %}
     </title>
@@ -31,7 +31,7 @@
 
   <body>
 
-    <iframe frameborder='0' height='100px' marginheight='0' marginwidth='0' scrolling='no' src='https://www.bro.org/frames/header.html' width='100%'>
+    <iframe frameborder='0' height='100px' marginheight='0' marginwidth='0' scrolling='no' src='https://www.zeek.org/frames/header.html' width='100%'>
     </iframe>
 
     <div class="container">
